incorrect-emit: Fix two false positives

When we're comparing a method's source location to check if it's
affected by Q_SIGNAL we must use the first declaration of that method,
and not other declarations which can also be a a definition, and live
outside of the class

BUG: 377140
BUG: 377134